# pygame_board

./: .gitignore  README.md  main.py  pyproject.toml
pygame_board/: gb_calc.py  gb_calc.pyi  gb_definition.py  gb_definition.pyi  gb_draw.py  gb_draw.pyi  gb_loader.py  gb_loader.pyi  gb_tokens.py  gb_tokens.pyi
pygame_board/saves/checkers/: _board.toml
pygame_board/saves/hnefatafl/: _board.toml
pygame_board/saves/reversi/: _board.toml
pygame_board/saves/ur/: _board.toml
