[project]
name = "gameboard"
version = "0.1.0"
description = "A tool that will generate a gameboard on a pygame surface by loading a definition from a toml file"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=11.3.0",
    "pygame>=2.6.1",
]
